adds basic jumbo

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -4,6 +4,15 @@
 //Importo bootstrap per l'utilizzo nell'app
 @import "bootstrap/scss/bootstrap";
 
+/* @font-face {
+    font-family: 'Rossela-Demo';
+    src: url('../assets/fonts/Rossela-Demo.woff2') format('woff2'),
+        url('../assets/fonts/Rossela-Demo.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+} */
+
 * {
     margin: 0;
     padding: 0;
